# jihun-personal-gym

./: .gitignore  README.md
diffusion-models/: README.md  pyproject.toml
diffusion-models/ddpm/: README.md  main.py  pyproject.toml  walkthrough.ipynb
diffusion-models/ddpm/scripts/: evaluate_cifar10.ipynb  train_cifar10.ipynb  train_cifar10.py
diffusion-models/ddpm/src/ddpm/: __init__.py  forward.py  sampling.py  trainer.py
diffusion-models/ddpm/tests/: test_forward.py  test_sampling.py  test_trainer.py
diffusion-models/diffusion-common/: README.md  data_preparation.ipynb  pyproject.toml
diffusion-models/diffusion-common/decoders/: unet.py
diffusion-models/diffusion-common/src/diffusion_common/: __init__.py
diffusion-models/diffusion-common/src/diffusion_common/decoders/: __init__.py  base.py  unet.py
diffusion-models/diffusion-common/src/diffusion_common/utils/: __init__.py  sinusoidal_embedding.py
diffusion-models/diffusion-common/tests/: test_sinusoidal_embedding.py  test_unet.py
diffusion-models/ncsn/: README.md  main.py  pyproject.toml
