[project]
name = "ddpm"
version = "0.1.0"
description = "Denoising Diffusion Probabilistic Models (DDPM) implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusion-common",
    "pyrefly>=0.54.0",
    "ruff>=0.15.2",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddpm"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
diffusion-common = { path = "../diffusion-common" }

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pyrefly]
project_includes = ["main.py", "*.ipynb"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
