[project]
name = "diffusion-common"
version = "0.1.0"
description = "Common Library for Diffusion Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "jupyterlab>=4.5.1",
    "pyrefly>=0.54.0",
    "ruff>=0.15.2",
    "torch>=2.10.0",
    "torchvision>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffusion_common"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pyrefly]
project_includes = ["src", "tests", "*.ipynb"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
